Fixed the alignment of the gray box headers on index.html

--- a/css/index.css
+++ b/css/index.css
@@ -391,21 +391,19 @@ footer .container .copyright {
     margin: 10px 0;
   }
 }
+.home .bottom-content .gray-box {
+  display: flex;
+  flex-direction: column;
+}
 .home .bottom-content .gray-box img {
   width: 100%;
-}
-@media (max-width: 500px) {
-  .home .bottom-content .gray-box {
-    display: flex;
-    flex-direction: column;
-  }
 }
 .home .bottom-content .gray-box .bottom-h2 {
   z-index: 10;
   border: 1px solid white;
   position: relative;
   top: -50px;
-  right: -621.63px;
+  align-self: flex-end;
   font-size: 2.2rem;
   color: #222222;
   font-weight: 500;
@@ -423,7 +421,7 @@ footer .container .copyright {
   }
 }
 .home .bottom-content .gray-box .outskirts {
-  right: 0px;
+  align-self: flex-start;
 }
 .services {
   margin-top: 44px;
