--- a/less/home.less
+++ b/less/home.less
@@ -99,16 +99,14 @@
             img {
                 width: 100%;
             }
-            @media @phone {
-                display: flex;
-                flex-direction: column;
-            }
+            display: flex;
+            flex-direction: column;
             .bottom-h2 {
                 z-index: 10;
                 border: 1px solid white;
                 position: relative;
                 top: -50px;
-                right: -621.63px;
+                align-self: flex-end;
                 font-size: 2.2rem;
                 color: @subColor;
                 font-weight: 500;
@@ -124,10 +122,7 @@
                 }
             }
             .outskirts {
-                right: 0px; // @media @phone {
-                //     top: -20px;
-                //     right: -10px;
-                // }
+                align-self: flex-start;
             }
         }
     }
